<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/list_name_textField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/list_name_place_holder"/>

    <com.example.triptrooperapp.GreenButtonView
        android:id="@+id/create_list_button"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>