...
    android:id="@+id/list_name_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListDetailsActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/optimize_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_rotate"
        app:layout_constraintBottom_toTopOf="@+id/create_list"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
...
